--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="pt-br">
 
 <head>
+    <meta name="author" content="@joyzinhw">
+    <meta name="description" content="codpet, um site para cadrastro de animais">
+    <meta name="keywords" content="sites, web, animais, cadrastro, adoção, localizacao">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +16,7 @@
 <body>
     <div class="container">
         <div class="form-image">
-            <img src="#" alt="">
+            <img src="assets/img/teste.png" alt="teste.png">
         </div>
         <div class="form">
             <form action="#">
@@ -87,9 +91,11 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="continue-button">
-                    <button><a href="#">Entrar</a> </button>
+                    <button><a href="#">Entrar</a></button>
                 </div>
+
             </form>
         </div>
     </div>
